# arts_game

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  README.md  arts_server.html  cargo.toml  chapter_1.html  deny.toml  future_monetization.html  print.html  searchindex.js  searchindex.json  vision.html
.github/workflows/: arts_book.yml  ci.yml
arts-book/: book.toml
arts-book/src/: SUMMARY.md  arts_server.md  chapter_1.md  future_monetization.md  vision.md
crates/arts_authentication/: Cargo.toml  readme.md
crates/arts_authentication/src/: http_relay_server.rs  lib.rs  main.rs
crates/arts_authentication/src/authentication/: mod.rs  requests.rs
crates/arts_authentication/src/authentication/supabase/: errors.rs  mod.rs
crates/arts_authentication/src/game_management/: mod.rs  requests.rs
crates/arts_authentication/src/user_management/: mod.rs  requests.rs
crates/arts_client/: Cargo.toml
crates/arts_client/src/: lib.rs  main.rs
crates/arts_client/src/authentication/: mod.rs
crates/arts_client/src/game_server_connection/: mod.rs
crates/arts_client/src/network/authentication/: mod.rs
crates/arts_core/: Cargo.toml
crates/arts_core/src/: game.rs  lib.rs  user_data.rs
crates/arts_core/src/actions/: mod.rs
crates/arts_core/src/auth_server/: game.rs  player_data.rs
crates/arts_core/src/authentication/: client_auth_systems.rs  client_authentication.rs  mod.rs
crates/arts_core/src/network/: client_authentication.rs  mod.rs
crates/arts_server/: Cargo.toml
crates/arts_server/src/: lib.rs  main.rs
crates/arts_server/src/app_authentication/: mod.rs
crates/arts_server/src/game_manager/: mod.rs
crates/arts_server/src/game_runner/: mod.rs
crates/arts_server/src/game_server_connection/: mod.rs
crates/arts_server/src/http_requests/: mod.rs
crates/auth_server/auth_server_binary/: Cargo.toml  readme.md
crates/auth_server/auth_server_binary/src/: lib.rs  main.rs
crates/auth_server/auth_server_binary/src/authentication/: mod.rs  requests.rs
crates/auth_server/auth_server_binary/src/authentication/supabase/: mod.rs
crates/auth_server/auth_server_binary/src/database/: mod.rs
crates/auth_server/auth_server_binary/src/game_management/: mod.rs  requests.rs
crates/auth_server/auth_server_binary/src/user_management/: mod.rs  requests.rs
crates/client/client_binary/: Cargo.toml
crates/client/client_binary/src/: camera.rs  lib.rs  main.rs  player.rs
crates/client/client_binary/src/app/: mod.rs
crates/client/client_binary/src/asset_loading/: mod.rs
crates/client/client_binary/src/network/: mod.rs
crates/client/client_binary/src/network/authentication/: mod.rs
crates/client/client_binary/src/ui/: colors.rs  mod.rs  modal.rs
crates/client/client_binary/src/ui/scenes/: mod.rs
crates/client/client_binary/src/ui/scenes/main_menu/: games.rs  mod.rs  username.rs
crates/client/client_binary/src/ui/scenes/main_menu/authenticate/: attempting_sign_in.rs  mod.rs  sign_in.rs  verify_email.rs
crates/client/client_binary/src/ui/scenes/main_menu/games_screen/: game_entry_button.rs  games_data.rs  mod.rs
crates/client/client_binary/src/ui/widgets/: basic_button.rs  mod.rs  modal.rs  tabbed_content.rs
crates/core/core_library/: Cargo.toml
crates/core/core_library/src/: lib.rs
crates/core/core_library/src/auth_server/: game.rs  mod.rs
crates/core/core_library/src/authentication/: client_auth_systems.rs  client_authentication.rs  mod.rs
crates/core/core_library/src/game_meta/: mod.rs
crates/core/core_library/src/network/: mod.rs
crates/core/db_schemes/: Cargo.toml
crates/core/game_generation/: Cargo.toml
crates/core/game_management/: Cargo.toml
crates/core/game_management/src/: lib.rs  new_game.rs
crates/core/general/: Cargo.toml
crates/core/general/src/: async_runners.rs  game_state.rs  lib.rs
crates/core/general/src/actions/: mod.rs
crates/core/general/src/auth_server/: game.rs  mod.rs  player_data.rs
crates/core/general/src/authentication/: client_auth_systems.rs  client_authentication.rs  mod.rs
crates/core/general/src/game_meta/: mod.rs
crates/core/general/src/game_simulation/: mod.rs
crates/core/general/src/map/: mod.rs  outpost.rs
crates/core/general/src/network/: game_http.rs  mod.rs  ws_game_server.rs
crates/core/general/src/objects/: core_components.rs  mod.rs  outpost.rs
crates/core/general/src/player/: mod.rs
crates/core/general/src/saving/: mod.rs  save_starting_state.rs
crates/core/http_server/: Cargo.toml
crates/core/sqlite_database/: Cargo.toml  readme.md
crates/core/sqlite_database/src/: database_trait.rs  database_traits.rs  lib.rs  update_row.rs  write_system.rs
crates/core/sqlite_database/src/saving/: mod.rs
crates/core/sqlite_database/src/schemes/: game_tables.rs  games_meta.rs  mod.rs
crates/core/sqlite_database/src/schemes/game_server/: game_tables.rs  games.rs  games_meta.rs  mod.rs
crates/game_server/console_parser/: Cargo.toml
crates/game_server/console_parser/src/: lib.rs
crates/game_server/game_server_binary/: Cargo.toml  readme.md
crates/game_server/game_server_binary/src/: game_meta.rs  lib.rs  main.rs
crates/game_server/game_server_binary/src/app/: app_scheduling.rs  mod.rs
crates/game_server/game_server_binary/src/app_authentication/: mod.rs
crates/game_server/game_server_binary/src/client_game_server_network/: mod.rs
crates/game_server/game_server_binary/src/game_manager/: client_game_connection.rs  game_database.rs  game_schedule.rs  manage_players_in_games.rs  mod.rs  new_game.rs  save_manager.rs
crates/game_server/game_server_binary/src/game_manager/new_game_handler/: mod.rs  new_game_command.rs  requests.rs
crates/game_server/game_server_binary/src/game_manager/new_game_http/: mod.rs  requests.rs
crates/game_server/game_server_binary/src/game_runner/: mod.rs
crates/game_server/game_server_binary/src/http_network/: game_http.rs  mod.rs
crates/game_server/game_server_binary/src/http_requests/: mod.rs
crates/game_server/game_server_binary/src/player_actions/: mod.rs
tools/ci/: Cargo.toml
tools/ci/src/: main.rs
(+5 files in other folders)
