[workspace.package]
authors = ["Noah Shomette <git@noahshomette.me>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = [
    "crates/arts_core",
    "crates/arts_server",
    "crates/arts_client",
    "crates/arts_authentication",
    "tools/ci",
]
# exclude = ["dist", "build", "assets", "credits"]
default-members = ["crates/arts_client"]
resolver = "2"

[workspace.dependencies]
