[workspace.package]
authors = ["Noah Shomette <git@noahshomette.me>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = [
    "crates/arts_core",
    "crates/arts_server",
    "crates/arts_client",
    "crates/arts_authentication",
    "tools/ci",
]
exclude = ["tools/*", "arts-book/*"]
default-members = ["crates/arts_client"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.12.0", default-features = false }
bevy_state_curves = "0.3.1"
bevy_vector_shapes = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.50"

# Async web and WASM stuff
wasm-bindgen = { version = "0.2.88", features = ["serde-serialize"] }
serde-wasm-bindgen = { version = "0.6.1" }
wasm-bindgen-futures = { version = "0.4.38" }
ehttp = { version = "0.3.1", features = ["native-async"] }
web-sys = { version = "0.3.65", features = ["console"] }
