[workspace.package]
authors = ["Noah Shomette <git@noahshomette.me>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = [
    # Core
    "crates/core/general",
    "crates/core/core_library",
    "crates/core/http_server",
    "crates/core/game_generation",
    "crates/core/db_schemes",

    # Game server
    "crates/game_server/game_server_binary",
    "crates/game_server/console_parser",
    # Client
    "crates/client/client_binary",

    # Auth Server
    "crates/auth_server/auth_server_binary",

    # Misc
    "tools/ci",
]
exclude = ["tools/*", "arts-book/*"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.12.0", default-features = false }
bevy_state_curves = "0.3.1"
bevy_vector_shapes = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.50"
url = { version = "2.5.0" }
rusqlite = { version = "0.30.0" }

# Async web and WASM stuff
ehttp = { version = "0.3.1", features = ["native-async"] }
web-sys = { version = "0.3.65", features = ["console"] }
# HTTP Server
tide = { version = "0.16.0" }
async-trait = { version = "0.1.74" }
jsonwebtoken = { version = "9.1.0" }
# Game
bevy_eventwork = { git = "https://github.com/NoahShomette/bevy_eventwork.git", branch = "wasm_core_features", default-features = false }
bevy_eventwork_mod_websockets = { git = "https://github.com/NoahShomette/bevy_eventwork_mod_websockets.git" }
uuid = { version = "1.6.1" }
