[package]
name = "arts_authentication"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, features = ["multi-threaded", "bevy_asset"] }
bevy_state_curves = { workspace = true }
ehttp = { workspace = true }
serde = { workspace = true }
arts_core = { path = "../arts_core" }
tide = { version = "0.16.0" }
clap = { version = "4.4.8", features = ["derive"] }
thiserror = { workspace = true }
async-trait = { version = "0.1.74" }
serde_json = { workspace = true }
jsonwebtoken = { version = "9.1.0" }
dotenv = { version = "0.15.0" }
