[package]
name = "arts_core"
authors.workspace = true
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, features = ["multi-threaded", "bevy_asset"] }
bevy_state_curves = { workspace = true }
ehttp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
