[package]
name = "arts_authentication"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
unwrap_used = { level = "deny" }

[dependencies]
bevy = { workspace = true, features = ["multi-threaded", "bevy_asset"] }
bevy_state_curves = { workspace = true }
serde = { workspace = true }
core_library = { path = "../../core/core_library", features = [
    "http_server_feature",
    "database",
] }
clap = { version = "4.4.8", features = ["derive"] }
# http client
ehttp = { workspace = true }
# http server
tide = { workspace = true }
async-trait = { version = "0.1.74" }
jsonwebtoken = { workspace = true }
rusqlite = { version = "0.30.0", features = ["bundled"] }

thiserror = { workspace = true }
serde_json = { workspace = true }
dotenv = { version = "0.15.0" }
rustrict = { workspace = true }
uuid = { workspace = true }
