[package]
name = "arts_client"
authors.workspace = true
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_library = { path = "../../core/core_library" }
serde = { workspace = true }
serde_json = { workspace = true }

bevy = { workspace = true, default-features = true }
bevy_state_curves = { workspace = true }

# Websocket Networking
bevy_eventwork = { workspace = true }
bevy_eventwork_mod_websockets = { workspace = true }

# HTTP Networking
ehttp = { workspace = true }
web-sys = { workspace = true }
