[package]
name = "arts_client"
authors.workspace = true
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_library = { path = "../../core/core_library" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

bevy = { workspace = true, default-features = true, features = [
    "bevy_ui",
    "multi-threaded",
    "bevy_text",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "default_font",
    "bevy_asset",
] }
bevy_state_curves = { workspace = true }
bevy_tweening = "0.9.0"
bevy_asset_loader = { version = "0.18.0" }
bevy-persistent = { workspace = true, features = ["json"] }
dirs = { workspace = true }

# Websocket Networking
bevy_eventwork = { workspace = true }
bevy_eventwork_mod_websockets = { workspace = true }

# HTTP Networking
ehttp = { workspace = true }
url = { workspace = true }
#ui crates
bevy_simple_text_input = { git = "https://github.com/NoahShomette/bevy_simple_text_input.git", branch = "main" }

# Testing
bevy-inspector-egui = { version = "0.21.0" }
