[package]
name = "core_library"
authors.workspace = true
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
http_server_feature = ["tide", "http_server", "async-trait"]
game_generator = ["game_generation"]
database = ["sqlite_database"]

[dependencies]
# HTTP Networking
http_server = { path = "../http_server", optional = true }
tide = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

# Game Generation
game_generation = { path = "../game_generation", optional = true }

# General
general = { path = "../general" }


# Db
sqlite_database = { path = "../sqlite_database", optional = true }
