[package]
name = "game_management"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
general = { path = "../general" }
bevy_state_curves = { workspace = true }
sqlite_database = { path = "../sqlite_database" }
