[package]
name = "console_parser"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, default-features = false }
clap = { version = "4.4.8", features = ["derive"] }
core_library = { path = "../../core/core_library" }
