[package]
name = "arts_server"
authors.workspace = true
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_library = { path = "../../core/core_library", features = [
    "http_server_feature",
    "game_generator",
] }
bevy = { workspace = true }
bevy_state_curves = { workspace = true }
clap = { version = "4.4.8", features = ["derive"] }

# Websocket Networking
bevy_eventwork = { workspace = true }
bevy_eventwork_mod_websockets = { workspace = true }

# HTTP Networking
ehttp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.30.0", features = ["bundled"] }
tide = { workspace = true }

# Local Dependencies
console_parser = { path = "../console_parser" }
